--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   },
   "homepage": "https://github.com/nucliweb/responsive-images-squoosh#readme",
   "dependencies": {
-    "@squoosh/cli": "^0.7.2"
+    "@squoosh/cli": "0.7.3"
   }
 }
